<?xml version="1.0" encoding="utf-8"?>
<sg.edu.smu.livelabs.mobicom.views.HomeView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background_blue"/>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/title_background_color"
                android:gravity="center"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/ongoing_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:text="@string/ongoing"/>

                <TextView
                    android:id="@+id/view_all_txt"
                    android:gravity="right|center_vertical"
                    android:layout_gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:paddingRight="10dp"
                    android:text="@string/view_all"/>
            </LinearLayout>

            <ListView
                android:id="@+id/current_events_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/transparent"
                android:dividerHeight="2dp"
                android:layout_margin="5dp">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginRight="2dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/current_activity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/title_background_color"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/activity"/>
                <GridView
                    android:id="@+id/current_activity_list"
                    android:layout_margin="7dp"
                    android:layout_below="@id/current_activity_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent"
                    android:dividerHeight="2dp"
                    android:numColumns="1"
                    android:horizontalSpacing="2dp"
                    android:verticalSpacing="2dp"
                    android:layout_alignParentBottom="true">
                </GridView>
            </RelativeLayout>
            <View
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/title_background_color"/>
            <RelativeLayout
                android:layout_alignParentRight="true"
                android:layout_marginLeft="2dp"
                android:layout_width="140dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/leaderboard_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/title_background_color"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/leader_board"/>
                <ListView
                    android:id="@+id/leaderboard_list"
                    android:layout_margin="7dp"
                    android:layout_below="@id/leaderboard_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/transparent"
                    android:dividerHeight="2dp"
                    android:layout_alignParentBottom="true">
                </ListView>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <sg.edu.smu.livelabs.mobicom.views.InstructionView
        android:id="@+id/instruction_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </sg.edu.smu.livelabs.mobicom.views.InstructionView>

</sg.edu.smu.livelabs.mobicom.views.HomeView>
