<?xml version="1.0" encoding="utf-8"?>
<sg.edu.smu.livelabs.mobicom.views.Profile1View
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"/>
    <RelativeLayout
        android:id="@+id/information_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registration (Step 1)"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_super_large"
                android:gravity="center"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/name_txt"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/is_this_your_name"/>
            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="45dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.8"
                    android:background="@color/white">
                </View>
                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_toRightOf="@id/icon_profile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/colorPrimary"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_normal"
                    android:enabled="true"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:maxLength="50"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/organisation_txt"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/are_you_from_this_organisation"/>
            <RelativeLayout
                android:id="@+id/organisation_layout"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="45dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.8"
                    android:background="@color/white">
                </View>
                <EditText
                    android:id="@+id/organisation_edit_text"
                    android:layout_toRightOf="@id/icon_profile"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/colorPrimary"
                    android:singleLine="true"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_normal"
                    android:enabled="true"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:maxLength="120"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:id="@+id/avatar_layout"
                >
                <TextView
                    android:id="@+id/avatar_txt"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/do_you_look_like"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:clickable="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/icon_profile_photo"/>

            </RelativeLayout>

        </LinearLayout>
        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_super_large"
            android:text="@string/next"
            android:background="@drawable/btn_background_color_secondary"/>
    </RelativeLayout>

    <sg.edu.smu.livelabs.mobicom.views.InstructionView
        android:id="@+id/instruction_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </sg.edu.smu.livelabs.mobicom.views.InstructionView>

    <sg.edu.smu.livelabs.mobicom.views.MyCropImageView
        android:id="@+id/my_crop_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </sg.edu.smu.livelabs.mobicom.views.MyCropImageView>

</sg.edu.smu.livelabs.mobicom.views.Profile1View>